# Figuring-plutus

plutus-tx-template/: cabal.project  plutus-tx-template.cabal
plutus-tx-template-bump-plutus-1.38.0.0/: plutus-tx-template.cabal
plutus-tx-template-bump-plutus-1.38.0.0/dist-newstyle/cache/: config
plutus-tx-template-main/: CHANGELOG.md  cabal.project  hola  my-project-blueprint.cabal
plutus-tx-template/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ppbl2024-plutus-examples-main/: cabal.project  ppbl2024-plutus-examples.cabal
