cabal-version:   3.0
name:            plutus-tx-template
version:         0.5.0.0
license:
build-type:      Simple
extra-doc-files: README.md

common options
  ghc-options: -Wall
  default-language: Haskell2010

library scripts
  import:         options
  hs-source-dirs: src
  exposed-modules:
    MyLib

  build-depends:
    , base
    , plutus-core 
    , plutus-ledger-api ^>=1.38.0.0
    , plutus-tx 
    , plutus-tx-plugin 

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin


-- test-suite a-normal-haskell-file-test
--     -- Import common warning flags.
--     import:           warnings

--     -- Base language which the package is written in.
--     default-language: Haskell2010

--     -- Modules included in this executable, other than Main.
--     -- other-modules:

--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:

--     -- The interface type and version of the test suite.
--     type:             exitcode-stdio-1.0

--     -- Directories containing source files.
--     hs-source-dirs:   test

--     -- The entrypoint to the test suite.
--     main-is:          Main.hs

--     -- Test dependencies.
--     build-depends:
--         base ^>=4.18.2.1,
--         a-normal-haskell-file
